# scaleshift-bench

./: .gitignore  README.md  pyproject.toml
configs/: india_igp_districts.yaml  mozambique_districts.yaml  terai_districts.yaml
data/results/: boundary_recall_by_ntokens.json  boundary_recall_by_ntokens_mlp.json  boundary_recall_by_size_given_ntokens.csv  boundary_recall_by_size_given_ntokens_mlp.csv  boundary_recall_center.json  boundary_recall_india.json  boundary_recall_mozambique.json  boundary_recall_scalepool.json  boundary_recall_trees.json  boundary_size_given_n_center.csv  boundary_size_given_n_india.csv  boundary_size_given_n_mozambique.csv  boundary_size_given_n_scalepool.csv  boundary_size_given_n_trees.csv  cross_fm_failure_correlation.csv  cross_fm_failure_correlation.json  cross_region_india_to_mozambique.json  cross_region_india_to_nepal.json  cross_region_mozambique_to_india.json  cross_region_mozambique_to_nepal.json  cross_region_nepal_to_india.json  cross_region_nepal_to_mozambique.json  eval_india_lr.json  eval_india_scalepool_lr.json  eval_mozambique_lr.json  eval_mozambique_scalepool_lr.json  eval_nepal_scalepool_lr.json  eval_nepal_scalepool_mlp.json  eval_nepal_scalepool_torch.json  eval_per_polygon.json  eval_per_polygon_600.json  eval_per_polygon_600_center.json  eval_per_polygon_600_lr.json  eval_per_polygon_600_mlp.json  eval_terai_starter.json  eval_trees_lr.json  layerwise_clay.json  paper_results_unified.csv  spectral_purity_analysis.json
docs/: PHASE1_RESULTS.md  PHASE2_TREES_RESULTS.md  PHASE3_INDIA_RESULTS.md  PHASE3_MULTIREGION_RESULTS.md  PHASE4_SCALEPOOL_RESULTS.md  PHASE_C_LAYERWISE.md  SPRINT_1_5_FINDINGS.md
docs/outreach/: panday_jecam.md  ricepal_fernandez.md
scripts/: analyze_boundary.py  analyze_cross_fm_failures.py  analyze_layerwise_clay.py  analyze_spectral_purity.py  build_chip_manifest.py  build_terai_chip_index.py  diag_token_counts.py  download_sample_chip.py  eval_cross_region.py  eval_scalepool_torch.py  eval_zeroshot.py  extract_features.py  extract_features_per_polygon.py  extract_field_polygons.py  fix_venv.sh  make_paper_figures.py  plot_results.py  pull_chip_imagery.py  pull_worldcover_labels.py  sample_negatives.py  setup_lambdavector2.sh  verify_install.py
src/scaleshift/: __init__.py
src/scaleshift/data/: __init__.py  chip.py  labels.py  token_pool.py  worldcover.py
src/scaleshift/model_zoo/: __init__.py  anysat.py  base.py  clay.py  presto.py  prithvi.py  terramind.py
src/scaleshift/utils/: logging.py
tests/: test_chip.py  test_lazy_imports.py  test_models_smoke.py  test_patch_size_invariant.py  test_registry.py
