[project]
name = "scaleshift-bench"
version = "0.0.1"
description = "Scale-aware benchmarking + adaptation of geospatial foundation models for smallholder agriculture."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Santosh Pant" }]

dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "pyproj>=3.6",
    "torch>=2.2,<2.6",
    "torchvision>=0.17",
    # 0.7 keeps us compatible with claymodel==1.5.0 which pins einops<0.8.
    "einops>=0.7",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "wandb>=0.17",
    "rich>=13.7",
    "earthengine-api>=0.1.400",
    "huggingface-hub>=0.24",
]

[project.optional-dependencies]
# claymodel is not on PyPI; install from the Clay-foundation/model repo.
clay      = ["claymodel @ git+https://github.com/Clay-foundation/model.git@main"]
prithvi   = ["terratorch>=0.99", "timm>=1.0"]
terramind = ["terratorch>=0.99"]
# NOTE: anysat has no pyproject.toml/setup.py in the upstream repo - it is
# loaded at runtime via torch.hub.load("gastruc/anysat", ...). No pip install.
#
# NOTE: presto pins earthengine-api==0.1.334 (Aug 2023) which conflicts with
# this project's GEE usage. It will be installed in a separate Phase 1 sub-env
# (or via a fork) when we implement the chip -> dataops adapter.
all       = [
    "claymodel @ git+https://github.com/Clay-foundation/model.git@main",
    "terratorch>=0.99",
    "timm>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scaleshift"]

# Required because several model extras pull from git+https URLs
# (claymodel, presto, anysat are not on PyPI).
[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires CUDA",
    "model_clay: requires claymodel installed",
    "model_prithvi: requires terratorch + Prithvi-EO-2.0 weights",
    "model_presto: requires presto installed (Phase 1 sub-env)",
    "model_anysat: AnySat loaded at runtime via torch.hub",
    "model_terramind: requires terratorch + TerraMind weights",
]
